# webrain

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  compute.py  data.py  leaderboard.py  tokens.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/ml/: distributed_ops.py  distributed_trainer.py  inference.py  model.py  pipeline_inference.py  sharded_checkpoint.py  swarm.py  tiling.py  tokenizer.py  trainer.py  vision.py
backend/app/models/: chat.py  compute.py  data_submission.py  token.py  training.py  user.py
backend/app/services/: compute_service.py  pipeline_scheduler.py  replication.py  shard_registry.py  signaling.py  token_service.py  weight_server.py
backend/app/workers/: ingestion.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/compute/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/data/: page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/components/: nav.tsx
frontend/src/hooks/: use-auth.ts  use-compute-worker.ts
frontend/src/lib/: api.ts  p2p-protocol.ts  webrtc.ts  weight-downloader.ts  weight-store.ts  ws.ts
frontend/src/workers/: compute-worker.ts  gpu-engine.ts  pipeline-engine.ts  training-engine.ts
frontend/src/workers/shaders/: elementwise.wgsl  matmul.wgsl  rmsnorm.wgsl  rope.wgsl  softmax.wgsl
(+2 files in other folders)
